# EvoFramework

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: CMakeLists.txt  main.cpp
src/Mutation/: CMakeLists.txt  Mutater.cpp  Mutater.h
src/NN/: CMakeLists.txt  CmakeLists.txt  Edge.cpp  Edge.h  NN.cpp  NN.h  NNLayer.cpp  NNLayer.h
src/Server/: CMakeLists.txt  HelpRequest.cpp  RequestCommand.cpp  RequestCommand.h  RequestFactory.cpp  RequestFactory.h  Server.cpp  Server.h  StartRequest.cpp  StartRequest.h  StatsRequest.h  StopRequest.cpp  StopRequest.h
src/Server/Requests/: CMakeLists.txt  HelpRequest.h  RequestCommand.h  StatsRequest.cpp  TestRequest.cpp  TestRequest.h
src/Tests/: CMakeLists.txt  tests.cpp
src/Trainer/: CMakeLists.txt  Elite.cpp  Elite.h  Environment.cpp  Environment.h  Model.cpp  Model.h  ModelVerifier.cpp  ModelVerifier.h  Trainer.cpp  Trainer.h
src/Trainer/sol2/: forward.hpp  sol.hpp
test/: CMakeLists.txt  tests.cpp
