cmake_minimum_required(VERSION 3.18.4)

project(EvoFramework)
set(CMAKE_CXX_STANDARD 20)

add_executable(${PROJECT_NAME} main.cpp "Trainer/Trainer.h")
include_directories("${PROJECT_SOURCE_DIR}")

add_subdirectory(NN)
list(APPEND EXTRA_LIB_DIRS "NN")
list(APPEND EXTRA_INCLUDE_DIRS "NN")
list(APPEND EXTRA_LINK_DIRS NN)

add_subdirectory(Mutation)
list(APPEND EXTRA_LIB_DIRS "Mutation")
list(APPEND EXTRA_INCLUDE_DIRS "Mutation")
list(APPEND EXTRA_LINK_DIRS Mutation)

if(WIN32)
    set(LUA_INCLUDE_DIR "C:/Users/Maccc/Documents/Coding/vcpkg/packages/lua_x64-windows/include")
    set(LUA_LIBRARIES "C:/Users/Maccc/Documents/Coding/vcpkg/packages/lua_x64-windows/lib/lua.lib")
endif(WIN32)
if(UNIX)
    find_package(Lua 5.3 REQUIRED)
    find_package(TBB REQUIRED)
endif(UNIX)
list(APPEND EXTRA_INCLUDE_DIRS ${LUA_INCLUDE_DIR})
list(APPEND EXTRA_LINK_DIRS ${LUA_LIBRARIES})
include_directories (${LUA_INCLUDE_DIR})

add_subdirectory(Trainer)
list(APPEND EXTRA_LIB_DIRS "Trainer")
list(APPEND EXTRA_INCLUDE_DIRS "Trainer")
list(APPEND EXTRA_LINK_DIRS Trainer)

if(UNIX)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Werror -Wno-error=invalid-offsetof -Wno-error=unused-function -Wno-error=unused-but-set-variable -Wno-error=unused-variable -Wno-error=sign-compare -Wno-error=reorder -pthread -std=c++2a")
    set(CMAKE_CXX_FLAGS_DEBUG "-g")
    set(CMAKE_CXX_FLAGS_RELEASE "-Ofast")
    list(APPEND EXTRA_LINK_DIRS TBB::tbb)
endif(UNIX)

target_include_directories(${PROJECT_NAME} PUBLIC ${EXTRA_INCLUDE_DIRS})
target_link_directories(${PROJECT_NAME} PUBLIC ${EXTRA_LIB_DIRS})
target_link_libraries(${PROJECT_NAME} PUBLIC ${EXTRA_LINK_DIRS} )